[package]
name = "screen_demo"
version = "0.1.0"
authors = ["KjartanKlein <kjartanbklein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssd1306 = "0.3.1"
embedded-graphics = "0.6.2"
linux-embedded-hal = "0.3.0"
